Correction of text fonts and "jump" in the form

--- a/src/styles/blocks/contactUs.scss
+++ b/src/styles/blocks/contactUs.scss
@@ -31,7 +31,10 @@
   &__input {
     width: 100%;
     margin-top: 21px;
+    border-color: transparent;
+
     color: rgba(147, 147, 163, 1);
+
     background-color: rgba(249, 249, 249, 1);
 
     @include form-box-border-style;
@@ -41,7 +44,10 @@
   &__textArea {
     width: 100%;
     margin-top: 21px;
+    border-color: transparent;
+
     color: rgba(147, 147, 163, 1);
+
     background-color: rgba(249, 249, 249, 1);
 
     @include form-box-border-style;
