--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   height: 100vh;
 
+  font-family: Manrope, Arial, sans-serif;
   font-weight: 700;
 
   background-color: rgba(249, 249, 249, 1);
