--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -4,9 +4,6 @@
   // margin-bottom: 48px;
 
   margin-bottom: 1px;
-
-  font-weight: 700;
-  line-height: 32px;
   text-align: left;
 
   @include font-sizeh2;
